[package]
name = "snake"
version = "1.0.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
log = "0.4.0"
env_logger = "0.11.8"
rand = "0.9.1"
strum = { version = "0.27.2", features = ["derive"] }
