[package]
name = "snake"
version = "1.0.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto="fat"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "fast"
harness = false

[[bench]]
name = "medium"
harness = false

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
log = "0.4.0"
env_logger = "0.11.8"
rand = "0.9.1"
strum = { version = "0.27.2", features = ["derive"] }
itertools = "0.14.0"
